Fixed issue where vertical align was implicitly middle

--- a/src/components/menubar/style.less
+++ b/src/components/menubar/style.less
@@ -17,6 +17,7 @@
 	> .menu-logo {
 		padding-left: 30px;
 		> img {
+      vertical-align: middle;
 			height: 28px;
 		}
 	}
@@ -28,6 +29,7 @@
 		width: 95px;
 		> img {
 			width: 35px;
+      vertical-align: middle;
 		}
 	}
 	> .menu-profile img {
